Fix td alignment in dataset tables
Fixes #15

--- a/force-app/main/default/aura/EinsteinIntent/EinsteinIntent.css
+++ b/force-app/main/default/aura/EinsteinIntent/EinsteinIntent.css
@@ -16,11 +16,6 @@
     border-left: solid 1px #D8DDE6;
 }
 
-
-.THIS td {
-	padding: 2px;
-}
-
 .THIS .probability {
 	padding-right: 4px;
     text-align: right;
