--- a/force-app/main/default/aura/EinsteinSentiment/EinsteinSentiment.css
+++ b/force-app/main/default/aura/EinsteinSentiment/EinsteinSentiment.css
@@ -17,10 +17,6 @@
 }
 
 
-.THIS td {
-	padding: 2px;
-}
-
 .THIS .probability {
 	padding-right: 4px;
     text-align: right;
